# majordomo-concierge-capstone

./: .env.example  .gitignore  README.md  adk_config.yaml  agent.py  pyproject.toml  streamlit_app.py
deployment/: app.py
src/: __init__.py  adk_app.py  llm_client.py
src/agents/: archivist.py  majordomo.py  oracle.py  scribe.py  sentinel.py
src/memory/: __init__.py  db.py  journal_store.py  profile_store.py  state_cache.py
src/orchestration/: graph.py  router.py
src/prompts/: dynamic_context.py  system_instructions.py
src/tools/: __init__.py
src/tools/local/: __init__.py  approval.py  calendar_local.py  journal_tools.py  math_helpers.py
src/tools/mcp/: calendar_mcp.py  google_search_mcp.py  home_assistant_mcp.py  wikipedia_mcp.py
tests/unit/: conftest.py  test_oracle_agent.py  test_router.py  test_sentinel_agent.py
