[project]
name = "majordomo-concierge-capstone"
version = "0.1.0"
description = "Concierge multi-agent system built with Google ADK"
authors = [
    { name = "Bryn Meredith" }
]
requires-python = ">=3.10"

dependencies = [
    "google-adk",
    "google-generativeai",
    "fastapi",
    "uvicorn[standard]",
    "pytest",
    "httpx",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
